Issue #30125 - Fix stuck menu css and jquery once error

--- a/drupal8/web/themes/cbcny_theme/sass/partials/components/nav/_nav--main.scss
+++ b/drupal8/web/themes/cbcny_theme/sass/partials/components/nav/_nav--main.scss
@@ -32,9 +32,14 @@
 
   .js-menu-dropdown-wrapper {
     position: absolute;
+    z-index: 2;
     padding: 40px 0 0 0;
     top: 25px;
-    z-index: 2;
+
+    .is-stuck & {
+      padding: 22px 0 0 0;
+      top: 17px;
+    }
   }
 
   .has-subnav .nav__subnav {
